your commit message

--- a/appdevelopment-details.html
+++ b/appdevelopment-details.html
@@ -4,39 +4,28 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - TECRAT Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>App Development - TECRAT Bootstrap Template</title>
+  <meta name="description" content="We build high-performing, user-friendly, and scalable mobile applications that enhance your digital presence.">
+  <meta name="keywords" content="app development, mobile apps, Android, iOS, React Native, Flutter, business apps, e-commerce apps">
 
-  <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: TECRAT
-  * Template URL: https://bootstrapmade.com/TECRAT-free-multi-purpose-html-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
-<body class="starter-page-page">
+<body class="service-details-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
@@ -83,36 +72,94 @@
 
   <main class="main">
 
-    <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Starter Page</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
+        <h1>App Development</h1>
+        <p>We build high-performing, user-friendly, and scalable mobile applications that enhance your digital presence.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Starter Page</li>
+            <li><a href="index.html#services">Services</a></li>
+            <li class="current">App Development</li>
           </ol>
         </nav>
       </div>
-    </div><!-- End Page Title -->
+    </div><section id="service-details" class="service-details section">
 
-    <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+      <div class="container">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Starter Section</h2>
-        <p>Starter Section Title<br></p>
-      </div><!-- End Section Title -->
+        <div class="row gy-4">
 
-      <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+                <a href="webdevelopment-details.html">Web Development</a>
+              <a href="#" class="active">App Development</a>
+              <a href="uiuxdetails.html">UI/UX Design</a>
+              <a href="custom-solutions.html" >Custom Solutions</a>
+            </div>
+
+            <h4>What We Offer</h4>
+            <p>We specialize in building a wide range of mobile solutions tailored to your unique business needs. Our goal is to deliver a high-quality product that not only looks great but also performs exceptionally well.</p>
+          </div>
+
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/services.jpg" alt="App Development Services" class="img-fluid services-img">
+            <h3>App Development Services</h3>
+            <p>
+              We craft mobile applications that are not just visually appealing but are also highly functional, fast, and secure. Our team uses the latest technologies and best practices to ensure your digital presence is powerful and effective. We build everything from simple blogs to complex e-commerce platforms.
+            </p>
+            
+            <h4>Types of Apps We Build</h4>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Android App Development</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>iOS App Development</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Cross-Platform Apps (React Native / Flutter)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Business Apps</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>E-Commerce Apps</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Educational Apps</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Custom Mobile Solutions</span></li>
+            </ul>
+
+            <h3 class="mt-4">Why Choose Our App Development Services?</h3>
+            <p>
+              Our approach focuses on creating solutions that are perfectly aligned with your business goals. We prioritize quality, performance, and user experience to give you a competitive edge.
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Mobile-friendly & user-centric design</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Smooth performance & fast loading</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Secure and scalable apps</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Custom features according to your business needs</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Post-launch support & maintenance</span></li>
+            </ul>
+
+            <h3 class="mt-4">Technology Stack</h3>
+            <p>We work with a variety of modern technologies to build robust and efficient mobile applications.</p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>**Mobile Frameworks:** React Native, Flutter</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>**Backend:** Laravel, Node.js, PHP</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>**Database:** MySQL, Firebase, MongoDB</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>**API Integration:** Payment Gateway, Social Media Login, Maps, etc.</span></li>
+            </ul>
+
+            <h3 class="mt-4">Our Work Process</h3>
+            <p>We follow a transparent and collaborative process to ensure your project is completed on time and meets all your expectations.</p>
+            <ol>
+              <li>Requirement Gathering: We start by understanding your vision and goals.</li>
+              <li>UI/UX Design Prototype: We create a visual blueprint of your app for your approval.</li>
+              <li>App Development: Our developers build the app, which is then thoroughly tested.</li>
+              <li>Testing & Quality Assurance: We conduct rigorous testing to ensure the app is bug-free and runs smoothly.</li>
+              <li>Deployment (Play Store / App Store): We launch your app, making it live for the world to see.</li>
+              <li>Support & Maintenance: We provide continuous support and maintenance to keep your app running smoothly.</li>
+            </ol>
+            
+            <a href="index.html#contact" class="cta-btn mt-4">Let’s Build Your App</a>
+          </div>
+
+        </div>
+
       </div>
 
-    </section><!-- /Starter Section Section -->
-
-  </main>
+    </section></main>
 
 <footer id="footer" class="footer dark-background">
 
@@ -184,13 +231,10 @@
 </footer>
 
 
-  <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -200,7 +244,6 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
