--- a/webdevelopment-details.html
+++ b/webdevelopment-details.html
@@ -4,41 +4,30 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - TECRAT Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Web Development - TECRAT Bootstrap Template</title>
+  <meta name="description" content="Professional web development services for modern, responsive, and scalable websites.">
+  <meta name="keywords" content="web development, website design, corporate websites, e-commerce, portfolio, blog, custom web applications">
 
-  <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: TECRAT
-  * Template URL: https://bootstrapmade.com/TECRAT-free-multi-purpose-html-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
+  </head>
 
-<body class="starter-page-page">
+<body class="service-details-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
@@ -83,36 +72,92 @@
 
   <main class="main">
 
-    <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Starter Page</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
+        <h1>Web Development</h1>
+        <p>We create modern, responsive, and scalable websites that help businesses grow online.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Starter Page</li>
+            <li><a href="index.html#services">Services</a></li>
+            <li class="current">Web Development</li>
           </ol>
         </nav>
       </div>
-    </div><!-- End Page Title -->
+    </div><section id="service-details" class="service-details section">
 
-    <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+      <div class="container">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Starter Section</h2>
-        <p>Starter Section Title<br></p>
-      </div><!-- End Section Title -->
+        <div class="row gy-4">
 
-      <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+              <a href="#" class="active">Web Development</a>
+              <a href="appdevelopment-details.html">App Development</a>
+              <a href="uiuxdetails.html">UI/UX Design</a>
+              <a href="custom-solutions.html" >Custom Solutions</a>
+            </div>
+
+            <h4>What We Offer</h4>
+            <p>We specialize in building a wide range of web solutions tailored to your unique business needs. Our goal is to deliver a high-quality product that not only looks great but also performs exceptionally well.</p>
+          </div>
+
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/services.jpg" alt="Web Development Services" class="img-fluid services-img">
+            <h3>Web Development Services</h3>
+            <p>
+              We craft websites that are not just visually appealing but are also highly functional, fast, and secure. Our team uses the latest technologies and best practices to ensure your online presence is powerful and effective. We build everything from simple blogs to complex e-commerce platforms.
+            </p>
+            
+            <h4>Types of Websites We Build</h4>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Business & Corporate Websites</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>E-Commerce Stores</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Portfolio Websites</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Blogs & News Portals</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Landing Pages</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Custom Web Applications</span></li>
+            </ul>
+
+            <h3 class="mt-4">Why Choose Our Web Development Services?</h3>
+            <p>
+              Our approach focuses on creating solutions that are perfectly aligned with your business goals. We prioritize quality, performance, and user experience to give you a competitive edge.
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span>Mobile-friendly and responsive design</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Fast loading and SEO optimized</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Secure & scalable solutions</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Custom features as per your needs</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Clean and professional UI/UX</span></li>
+            </ul>
+
+            <h3 class="mt-4">Technology Stack</h3>
+            <p>We work with a variety of modern technologies to build robust and efficient websites.</p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> <span> Frontend:  HTML5, CSS3, JavaScript, Bootstrap, Tailwind, React</span></li>
+              <li><i class="bi bi-check-circle"></i> <span> Backend:  PHP, Laravel, Node.js</span></li>
+              <li><i class="bi bi-check-circle"></i> <span> Database:  MySQL, MongoDB</span></li>
+              <li><i class="bi bi-check-circle"></i> <span> Others:  API Integration, Payment Gateway, CMS (WordPress, Laravel CMS)</span></li>
+            </ul>
+
+            <h3 class="mt-4">Our Work Process</h3>
+            <p>We follow a transparent and collaborative process to ensure your project is completed on time and meets all your expectations.</p>
+            <ol>
+              <li> Requirement Discussion:  We start by understanding your vision and goals.</li>
+              <li> Wireframe & Design Approval:  We create a visual blueprint of your website for your approval.</li>
+              <li> Development & Testing:  Our developers build the website, which is then thoroughly tested.</li>
+              <li> Deployment:  We launch your website, making it live for the world to see.</li>
+              <li> Ongoing Support:  We provide continuous support and maintenance to keep your site running smoothly.</li>
+            </ol>
+            
+            <a href="index.html#contact" style="background-color: #ff4a17; color:white;" class="btn  mt-4">Hire Me</a>
+          </div>
+
+        </div>
+
       </div>
 
-    </section><!-- /Starter Section Section -->
-
-  </main>
+    </section></main>
 
 <footer id="footer" class="footer dark-background">
 
@@ -184,13 +229,10 @@
 </footer>
 
 
-  <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -200,7 +242,6 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
